--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	
-	<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-  <script type="text/javascript" src="scripts.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
 
 </head>
 <body>
+
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 mg-stuff">
+			<div class="col-sm-12 mg-stuff text-center">
 				
+			 	<h1>How difficult?</h1>
+			 	<button class="btn btn-lg btn-primary">Easy</button>
+			 	<button class="btn btn-lg btn-warning">Medium</button>
+			 	<button class="btn btn-lg btn-danger">Hard</button>
 			</div>
 		</div>
 	</div>
+
+	<div id="game"></div>
+
+
 </body>
 </html>
